Inicio do projeto

--- a/Tecnicas de programação I/Aula 6/Aula 6 - Limpeza e Tratamento de Dados.ipynb
+++ b/Tecnicas de programação I/Aula 6/Aula 6 - Limpeza e Tratamento de Dados.ipynb
@@ -558,6 +558,121 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 162,
+   "id": "f3cc3b1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pclass</th>\n",
+       "      <th>survived</th>\n",
+       "      <th>sibsp</th>\n",
+       "      <th>parch</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1309.000000</td>\n",
+       "      <td>1309.000000</td>\n",
+       "      <td>1309.000000</td>\n",
+       "      <td>1309.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>2.294882</td>\n",
+       "      <td>0.381971</td>\n",
+       "      <td>0.498854</td>\n",
+       "      <td>0.385027</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.837836</td>\n",
+       "      <td>0.486055</td>\n",
+       "      <td>1.041658</td>\n",
+       "      <td>0.865560</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>9.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            pclass     survived        sibsp        parch\n",
+       "count  1309.000000  1309.000000  1309.000000  1309.000000\n",
+       "mean      2.294882     0.381971     0.498854     0.385027\n",
+       "std       0.837836     0.486055     1.041658     0.865560\n",
+       "min       1.000000     0.000000     0.000000     0.000000\n",
+       "25%       2.000000     0.000000     0.000000     0.000000\n",
+       "50%       3.000000     0.000000     0.000000     0.000000\n",
+       "75%       3.000000     1.000000     1.000000     0.000000\n",
+       "max       3.000000     1.000000     8.000000     9.000000"
+      ]
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 103,
    "id": "630c81ac",
    "metadata": {},
@@ -2963,11 +3078,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 163,
+   "id": "ff4095e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pclass          0\n",
+       "survived        0\n",
+       "name            0\n",
+       "sex             0\n",
+       "age           263\n",
+       "sibsp           0\n",
+       "parch           0\n",
+       "ticket          0\n",
+       "fare            1\n",
+       "cabin        1014\n",
+       "embarked        2\n",
+       "boat          823\n",
+       "body         1188\n",
+       "home.dest     564\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
    "id": "253f2943",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pclass</th>\n",
+       "      <th>survived</th>\n",
+       "      <th>name</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>age</th>\n",
+       "      <th>sibsp</th>\n",
+       "      <th>parch</th>\n",
+       "      <th>ticket</th>\n",
+       "      <th>fare</th>\n",
+       "      <th>cabin</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [pclass, survived, name, sex, age, sibsp, parch, ticket, fare, cabin]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 160,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "dez_colunas = df.dropna(axis=0).iloc[:, :10]\n",
+    "\n",
+    "dez_colunas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "id": "897c19a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dez_colunas.shape[0]"
+   ]
   }
  ],
  "metadata": {
