--- a/Tecnicas de programação I/Aula 2/Aula 2- Introducao a Numpy.ipynb
+++ b/Tecnicas de programação I/Aula 2/Aula 2- Introducao a Numpy.ipynb
@@ -629,12 +629,12 @@
     "vetor = [0, 5, 1, 9, 9, 87]\n",
     "print(vetor[::-1])\n",
     "\n",
-    "# Maneira 2\n",
+    "# Maneira 2: reverse() - altera a ordem da lista original\n",
     "vetor2 = [0, 5, 1, 9, 9, 87]\n",
     "vetor2.reverse()\n",
     "print(vetor2)\n",
     "\n",
-    "# Maneira 3\n",
+    "# Maneira 3: reversed() - converter esse objeto iterável de volta para uma lista usando list(), você obtém uma nova lista invertida, sem modificar a lista original\n",
     "vetor3 = [0, 5, 1, 9, 9, 87]\n",
     "vetor3_obj = reversed(vetor3)\n",
     "print(list(vetor3_obj))\n",
@@ -644,6 +644,12 @@
     "vetor4_invert = np.array(vetor4[::-1])\n",
     "print(vetor4_invert)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93f60d57",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -925,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "c371497b",
    "metadata": {},
    "outputs": [
@@ -952,6 +958,42 @@
     "print(\"Vetor 2:\", vetor_2)\n",
     "print(\"Produto escalar:\", produto_escalar)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "752e6ecd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vetor A: [1 2 3 4]\n",
+      "Vetor B: [12  6  0 29]\n",
+      "Produto Escalar: 140\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "lista_1 = [1, 2, 3, 4]\n",
+    "lista_2 = [12, 6, 0, 29]\n",
+    "\n",
+    "array_1 = np.array(lista_1)\n",
+    "array_2 = np.array(lista_2)\n",
+    "\n",
+    "# Calculando o produto escalar:\n",
+    "# zip () -> combinar elementos correspondentes de dois iteráveis, gerando uma tupla\n",
+    "#sum() -> somar elementos dos iteráveis\n",
+    "produto_escalar = sum(a * b for a, b in zip(array_1, array_2))\n",
+    "\n",
+    "# Exibindo o resultado\n",
+    "print(f\"Vetor A: {array_1}\")\n",
+    "print(f\"Vetor B: {array_2}\")\n",
+    "print(f\"Produto Escalar: {produto_escalar}\")"
+   ]
   }
  ],
  "metadata": {
@@ -970,7 +1012,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.7"
   },
   "vscode": {
    "interpreter": {
