--- a/Tecnicas de programação I/Pasta Geral/Projeto/Projeto.ipynb
+++ b/Tecnicas de programação I/Pasta Geral/Projeto/Projeto.ipynb
@@ -1391,7 +1391,8 @@
     "\n",
     "Investigar correlações entre variáveis contínuas com df.corr() e visualizar com heatmaps.\n",
     "\n",
-    "Realizar análises de agrupamento, como média de salário por experiência ou localização, usando df.groupby()."
+    "Realizar análises de agrupamento, como média de salário por experiência ou localização, usando df.groupby().\n",
+    "teste"
    ]
   },
   {
